--- a/views/_footer.twig
+++ b/views/_footer.twig
@@ -3,10 +3,11 @@
     <div class="row">
 
         <div class="col-md-12 mt-md-0 mt-3">
-            <center><h1>Chris Regalado</h1></center>
+            <center><a href="https://www.regaladochris.com" target="_blank">Chris Regalado</a></center>
         </div>
 
     </div>
 
 </footer>
+<script src="assets/js/main.js"></script>
 </html>
