--- a/views/index.twig
+++ b/views/index.twig
@@ -1,75 +1,77 @@
 <body>
-<div class="container">
+<nav class="navbar navbar-light bg-light">
+  <a class="navbar-brand" href="#">Pico y Placa</a>
+</nav>
+<div class="container" id="main-form">
     <form method="post" id="placa_form">
         <div class="row">
                 <div class="col-md-12">
-                    <div class="form-group">
-                        <center><label for="exampleInputEmail1">Placa</label></center>
-                        <center><input type="text" name="placa" class="form-control" id="input-placa" placeholder="XXX-XXXX" maxlenght="8"></center>
-                    </div>
+                    <center><center><h3>Número de PLACA</h3></center></center>
                 </div>
-        <div class="row">
-                <div class="col-md-1"></div>
-                <div class="col-md-2">
-                    <a class="btn btn-default mark-day" data-day="1" href="javascript:void(0)">Lunes</a>
-                </div>
-                <div class="col-md-2">
-                    <a class="btn btn-default mark-day" data-day="2" href="javascript:void(0)">Martes</a>
-                </div>
-                <div class="col-md-2">
-                    <a class="btn btn-default mark-day" data-day="3" href="javascript:void(0)">Miércoles</a>
-                </div>
-                <div class="col-md-2">
-                    <a class="btn btn-default mark-day" data-day="4" href="javascript:void(0)">Jueves</a>
-                </div>
-                <div class="col-md-2">
-                    <a class="btn btn-default mark-day" data-day="5" href="javascript:void(0)">Viernes</a>
-                </div>
-                <div class="col-md-1"></div>
-                <input type="text" name="dia" id="input-dia">
-        </div>
                 <div class="col-md-12">
-                    <div style="overflow:hidden;">
-                        <div class="form-group">
-                            <div class="row">
-                                <div class="col-md-8">
-                                    <div id="datetimepicker12"></div>
-                                </div>
+                    <div class="row justify-content-md-center">
+                        <div class="col-md-5">
+                            <div class="form-group">
+                                <center><input type="text" name="placa" class="form-control text-center text-uppercase" id="input-placa" placeholder="XXX-XXXX" maxlength="8"></center>
                             </div>
                         </div>
-                        <script type="text/javascript">
-                            $(function () {
-                                $('#datetimepicker12').datetimepicker({
-                                    inline: true,
-                                    sideBySide: true,
-                                    format: 'LT'
-                                });
-                            });
-                        </script>
                     </div>
-                    <input type="text" name="hora" id="input-hora">
+                </div>
+                <div class="col-md-12">
+                    <center><h3>Seleccione un día</h3></center>
+                </div>
+                <div class="col-md-12">
+                    <div class="row justify-content-md-center">
+                            <div class="col-md-2">
+                                <a class="d-flex justify-content-center align-items-center btn alert-secondary mark-day mark-day-1" data-day="1" href="javascript:void(0)">Lunes</a>
+                            </div>
+                            <div class="col-md-2">
+                                <a class="d-flex justify-content-center align-items-center btn alert-secondary mark-day mark-day-2" data-day="2" href="javascript:void(0)">Martes</a>
+                            </div>
+                            <div class="col-md-2">
+                                <a class="d-flex justify-content-center align-items-center btn alert-secondary mark-day mark-day-3" data-day="3" href="javascript:void(0)">Miércoles</a>
+                            </div>
+                            <div class="col-md-2">
+                                <a class="d-flex justify-content-center align-items-center btn alert-secondary mark-day mark-day-4" data-day="4" href="javascript:void(0)">Jueves</a>
+                            </div>
+                            <div class="col-md-2">
+                                <a class="d-flex justify-content-center align-items-center btn alert-secondary mark-day mark-day-5" data-day="5" href="javascript:void(0)">Viernes</a>
+                            </div>
+                            <input type="hidden" name="dia" id="input-dia">
+                    </div>
+                </div>
+                <div class="col-md-12">
+                    <center><h3>Seleccione una hora</h3></center>
+                </div>
+                <div class="col-md-12 mt-5">
+                    <div class="row justify-content-md-center">
+                        <div class="col-md-8">
+                            <div style="overflow:hidden;">
+                                <div class="form-group">
+                                    <div class="row">
+                                        <div class="col-md-12">
+                                            <div id="datetimepicker12"></div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <script type="text/javascript">
+                                    $(function () {
+                                        $('#datetimepicker12').datetimepicker({
+                                            inline: true,
+                                            sideBySide: true,
+                                            format: 'LT'
+                                        });
+                                    });
+                                </script>
+                            </div>
+                            <input type="hidden" name="hora" id="input-hora">
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-12 mt-2 mb-5">
+                    <center><a class="btn btn-lg btn-success" id="consultar" onclick="javascript:void(0)" >Consultar</a></center>
                 </div>
         </div>
     </div>
-    <script>
-        $(".mark-day").click(function(){
-            $("#input-dia").val($( this ).attr('data-day'));
-        });
-        $("#datetimepicker12").on("ng.change", function(e, date){
-            $("#input-hora").val(date);
-        });
-        $.ajax({
-                method : 'post',
-                utl : '/ajax.php',
-                data : { fn : 'consulta', placa : $("#input-placa").val() , dia : $("#input-dia").val(), hora : $("#input-dia").val() },
-                success : function(data) {
-                    var res = JSON.parse(data);
-                    Swal.fire({
-                        title: "Estado",
-                        text: data.msg
-                    });
-                }
-            });
-    </script>
 </div>
 </body>
