--- a/views/index.twig
+++ b/views/index.twig
@@ -22,19 +22,19 @@
                 </div>
                 <div class="col-md-12">
                     <div class="row justify-content-md-center">
-                            <div class="col-md-2 col-xs-2">
+                            <div class="col-md-2 col-xs-2 p-2 col-xs-offset-1">
                                 <a class="d-flex justify-content-center align-items-center btn alert-secondary mark-day mark-day-1" data-day="1" href="javascript:void(0)">Lunes</a>
                             </div>
-                            <div class="col-md-2 col-xs-2">
+                            <div class="col-md-2 col-xs-2 p-2">
                                 <a class="d-flex justify-content-center align-items-center btn alert-secondary mark-day mark-day-2" data-day="2" href="javascript:void(0)">Martes</a>
                             </div>
-                            <div class="col-md-2 col-xs-2">
+                            <div class="col-md-2 col-xs-2 p-2">
                                 <a class="d-flex justify-content-center align-items-center btn alert-secondary mark-day mark-day-3" data-day="3" href="javascript:void(0)">Miércoles</a>
                             </div>
-                            <div class="col-md-2 col-xs-2">
+                            <div class="col-md-2 col-xs-2 p-2">
                                 <a class="d-flex justify-content-center align-items-center btn alert-secondary mark-day mark-day-4" data-day="4" href="javascript:void(0)">Jueves</a>
                             </div>
-                            <div class="col-md-2 col-xs-2">
+                            <div class="col-md-2 col-xs-2 p-2">
                                 <a class="d-flex justify-content-center align-items-center btn alert-secondary mark-day mark-day-5" data-day="5" href="javascript:void(0)">Viernes</a>
                             </div>
                             <input type="hidden" name="dia" id="input-dia">
