--- a/views/_footer.twig
+++ b/views/_footer.twig
@@ -3,7 +3,7 @@
     <div class="row">
 
         <div class="col-md-12 mt-md-0 mt-3">
-            <center><a href="https://www.regaladochris.com" target="_blank">Chris Regalado</a></center>
+            <center>© <a href="https://www.regaladochris.com" target="_blank">Chris Regalado</a></center>
         </div>
 
     </div>
