--- a/views/index.twig
+++ b/views/index.twig
@@ -22,7 +22,7 @@
                 </div>
                 <div class="col-md-12">
                     <div class="row justify-content-md-center">
-                            <div class="col-md-2 col-xs-2 p-2 col-xs-offset-1">
+                            <div class="col-md-2 col-xs-2 p-2  col-md-offset-0 col-xs-offset-1">
                                 <a class="d-flex justify-content-center align-items-center btn alert-secondary mark-day mark-day-1" data-day="1" href="javascript:void(0)">Lunes</a>
                             </div>
                             <div class="col-md-2 col-xs-2 p-2">
